sn-development-k8s/deployment-streaming.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sn-streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sn-streaming
  template:
    metadata:
      labels:
        app: sn-streaming
    spec:
      containers:
        - name: sn-streaming
          image:  registry.emso.vn/sn-web:0.2.41
          command: ["node", "./streaming"]
          ports:
            - name: streaming
              containerPort: 4000
      imagePullSecrets:
        - name: registry # Tên secret đã tạo
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: magnum.openstack.org/nodegroup
      #               operator: In
      #               values:
      #                 - ng-chat
