sn-development-k8s/deployment-worker-default.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sn-worker-default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sn-worker-default
  template:
    metadata:
      labels:
        app: sn-worker-default
    spec:
      containers:
        - name: sn-worker-default
          image: registry.emso.vn/sn-web:0.2.41
          # resources:
          #   requests:
          #     cpu: "3.5"     
          #     memory: "3Gi"
          command: ["bundle", "exec"]
          args: ["sidekiq", "-c", "25", "-q", "default", "-q","mailers", "-q", "scheduler"]
          ports:
            - name: streaming
              containerPort: 4000
      imagePullSecrets:
        - name: registry # Tên secret đã tạo
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: magnum.openstack.org/nodegroup
      #               operator: In
      #               values:
      #                 - ng-web
