sn-development-k8s/fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sn-fe
spec:
  selector:
    app: sn-fe
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 80
  type: ClusterIP
