sn-development-k8s/streaming-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sn-streaming
spec:
  selector:
    app: sn-streaming
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
    - name: https
      port: 443
      protocol: TCP
      targetPort: 4000
  type: ClusterIP
