sn-development-k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sn-web
spec:
  selector:
    app: sn-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      port: 443
      protocol: TCP
      targetPort: 3000
  type: ClusterIP
